--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "monaca:debug": "npm run watch",
     "dev": "webpack-serve --open",
     "build": "webpack --mode production",
-    "watch": "webpack --watch --mode production"
+    "watch": "webpack --watch --mode production",
+    "lint": "eslint './src/**/*.js?x' --ext .tsx,.ts",
+    "lint:fix": "npm run lint -- --fix"
   },
   "cordova": {
     "plugins": {
@@ -51,12 +53,34 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "@types/dotenv": "^6.1.1",
+    "@types/node": "^12.7.5",
+    "@types/react": "^16.9.2",
+    "@types/react-redux": "^7.1.2",
+    "@types/styled-components": "^4.1.19",
+    "@types/testing-library__react": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "cordova": "^9.0.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.1",
     "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb-typescript": "^4.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-import-resolver-ts": "^0.4.2",
+    "eslint-import-resolver-typescript": "^1.1.1",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest-dom": "^2.1.0",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "1.x",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -65,9 +89,11 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
     "postcss-url": "^7.3.2",
+    "prettier": "^2.0.5",
     "progress-bar-webpack-plugin": "^1.11.0",
     "react-hot-loader": "^4.3.3",
     "style-loader": "^0.21.0",
+    "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.0.8",
     "webpack-serve": "^2.0.2",
