--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "ts-loader": "^7.0.5",
+    "tslint": "^6.1.2"
   },
   "scripts": {
     "start": "npm run monaca:preview",
@@ -35,8 +37,11 @@
     "dev": "webpack-serve --open",
     "build": "webpack --mode production",
     "watch": "webpack --watch --mode production",
-    "lint": "eslint './src/**/*.js?x' --ext .tsx,.ts",
-    "lint:fix": "npm run lint -- --fix"
+    "pretty": "prettier --write --config .prettierrc.json 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint './src/{actions,api,components,containers,reducers,selectors}/**/*' --ext .tsx,.ts",
+    "lint:fix": "npm run lint -- --fix",
+    "tslint": "tslint './src/**/*.{ts,tsx}' --project tsconfig.json",
+    "tslint:fix": "tslint './src/**/*.{ts,tsx}' --project tsconfig.json"
   },
   "cordova": {
     "plugins": {
@@ -53,6 +58,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "@babel/preset-typescript": "^7.10.1",
     "@types/dotenv": "^6.1.1",
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
@@ -93,6 +99,9 @@
     "progress-bar-webpack-plugin": "^1.11.0",
     "react-hot-loader": "^4.3.3",
     "style-loader": "^0.21.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.0.8",
