--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "connected-react-router": "^6.8.0",
     "cordova-custom-config": "5.1.0",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-inappbrowser": "^4.0.0",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "1.3.3",
@@ -31,7 +33,7 @@
     "monaca:preview": "npm run dev & npm run watch",
     "monaca:transpile": "npm run build",
     "monaca:debug": "npm run watch",
-    "dev": "webpack-serve --open",
+    "dev": "webpack-serve --open --host localhost",
     "build": "webpack --mode production",
     "watch": "webpack --watch --mode production",
     "pretty": "prettier --write --config .prettierrc.json 'src/**/*.{js,jsx,ts,tsx}'",
@@ -47,7 +49,8 @@
       "cordova-plugin-whitelist": {},
       "monaca-plugin-monaca-core": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-inappbrowser": {}
     }
   },
   "devDependencies": {
@@ -69,6 +72,7 @@
     "@typescript-eslint/parser": "^2.30.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "connect-history-api-fallback": "^1.6.0",
     "cordova": "^9.0.0",
     "css-loader": "^1.0.0",
     "eslint": "^7.3.1",
@@ -89,6 +93,7 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "koa-connect": "^2.1.0",
     "mini-css-extract-plugin": "^0.4.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
