--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
     "@babel/plugin-proposal-optional-chaining": "^7.10.3",
+    "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-typescript": "^7.10.1",
