--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "1.3.3",
-    "monaca-plugin-monaca-core": "3.3.0",
+    "cordova-plugin-wkwebview-engine": "^1.2.1",
+    "monaca-plugin-monaca-core": "^3.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-html5-camera-photo": "^1.5.4",
@@ -51,7 +52,8 @@
       "monaca-plugin-monaca-core": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-camera": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-wkwebview-engine": {}
     },
     "platforms": [
       "ios"
