--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,19 +8,23 @@
     ],
     "rules": {
         "react/prop-types": "off",
-        "react/jsx-indent": [2, 4, { "checkAttributes": false }],
-        "react/jsx-indent-props": [2, 4],
         "import/prefer-default-export": "off",
         "import/no-cycle": "off",
         "no-multi-assign": "off"
     },
     "settings": {
         "import/parsers": {
-            "@typescript-eslint/parser": [".ts", ".tsx"]
+            "@typescript-eslint/parser": [
+                ".ts",
+                ".tsx"
+            ]
         },
         "import/resolver": {
             "typescript": {}
         }
     },
-    "plugins": ["import", "jest-dom"]
+    "plugins": [
+        "import",
+        "jest-dom"
+    ]
 }
