--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cordova-plugin-whitelist": "1.3.3",
     "cordova-plugin-wkwebview-engine": "^1.2.1",
     "monaca-plugin-monaca-core": "^3.3.0",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-html5-camera-photo": "^1.5.4",
