--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "1.3.3",
     "cordova-plugin-wkwebview-engine": "^1.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "monaca-plugin-monaca-core": "^3.3.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
@@ -39,7 +40,6 @@
     "dev": "webpack-serve --open --host localhost",
     "build": "webpack --mode production",
     "watch": "webpack --watch --mode production",
-    "pretty": "prettier --write --config .prettierrc.json 'src/**/*.{js,jsx,ts,tsx}'",
     "lint": "eslint './src/{actions,api,components,containers,reducers,selectors}/**/*' --ext .tsx,.ts",
     "lint:fix": "npm run lint -- --fix",
     "tslint": "tslint './src/**/*.{ts,tsx}' --project tsconfig.json",
