--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,40 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "lib": ["dom", "dom.iterable", "esnext"],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "noEmit": true,
-      "esModuleInterop": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "jsx": "preserve",
-      "baseUrl": ".",
-      "paths": {
-        "@Actions": ["src/actions"],
-        "@Components/*": ["src/components/*"],
-        "@Components": ["src/components"],
-      }
-    },
-    "include": ["src/**/*.ts", "src/**/*.tsx"]
-  }
-  
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@Actions": [
+        "src/actions"
+      ],
+      "@Components/*": [
+        "src/components/*"
+      ],
+      "@Components": [
+        "src/components"
+      ],
+    }
+  },
+  "types": [
+    "cordova-plugin-camera"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ]
+}
