--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-simple-pull-to-refresh": "^1.2.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "rmc-pull-to-refresh": "^1.0.13",
     "styled-components": "^5.1.1",
     "typeface-roboto": "0.0.75"
   },
