--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-simple-pull-to-refresh": "^1.2.0",
+    "react-swipeable": "^5.5.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
