--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux-thunk": "^2.3.0",
     "rmc-pull-to-refresh": "^1.0.13",
     "styled-components": "^5.1.1",
+    "throttle-debounce": "^2.2.1",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
