--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "monaca:transpile": "npm run build",
     "monaca:debug": "npm run watch",
     "dev": "webpack-serve --open --host localhost",
+    "cordova": "cordova",
+    "cordova:build": "cordova build",
+    "cordova:build:ios": "cordova build ios",
     "build": "webpack --mode production",
     "watch": "webpack --watch --mode production",
     "lint": "eslint './src/{actions,api,components,containers,reducers,selectors}/**/*' --ext .tsx,.ts",
