--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "cordova:build:ios": "cordova build ios",
     "build": "webpack --mode production",
     "watch": "webpack --watch --mode production",
-    "lint": "eslint './src/{actions,api,components,containers,reducers,selectors}/**/*' --ext .tsx,.ts",
+    "lint": "eslint './src/{api,react,redux,modules,css}/**/*' --ext .tsx,.ts",
     "lint:fix": "npm run lint -- --fix",
     "tslint": "tslint './src/**/*.{ts,tsx}' --project tsconfig.json",
     "tslint:fix": "tslint './src/**/*.{ts,tsx}' --project tsconfig.json"
@@ -86,6 +86,7 @@
     "@types/testing-library__react": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "connect-history-api-fallback": "^1.6.0",
