--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "connected-react-router": "^6.8.0",
     "cordova-custom-config": "5.1.0",
     "cordova-ios": "^5.1.1",
